2014-07-05  Per Bothner  <per@bothner.com>

	* CompileArrays.java (createArray): Optimize the case when there are
	no splices.

2014-07-03  Per Bothner  <per@bothner.com>

	* CompileInvoke.java (validateNamedInvoke): Optimize calls with
	splices if the argument list only matches a single method.

2014-06-30  Per Bothner  <per@bothner.com>

	* OccurrenceType.java (encodeType): New method.

	* ArraySet (apply3): Add call to convertToRaw.

2014-06-17  Per Bothner  <per@bothner.com>

	* CompileInvoke.java (validateApplyInvoke): Move a good chunk
	of the code into a new method.  This allows the latter to be
	called directly from CompileNamedPart.
	(validateNamedInvoke): New method.  Don't call getMethods
	if methods were passed in parameter.

2014-06-04  Per Bothner  <per@bothner.com>

	Some incomplete hooks for overload resolution with splices.
	* ClassMethods.java (selectApplicable): Take maybeMore parameter.
	* CompileInvoke.java (validateApplyInvoke): Update.
	* CompileBuildObject.java (hasAddChildMethod): Update.

2014-05-26  Per Bothner  <per@bothner.com>

	* ArrayGet.java: Convert to use new compilerXKey protocol.
	* ArrayLength.java: Likewise.
	* ArrayNew.java: Likewise.
	* ArraySet.java: Likewise.
	* CompileArrays.java: No longer implements Inlineable.

	Improve bytecode for creating arrays with splices.
	* ArrayMake.java: New class, extends ProcedureN.
	* CompileArrays.java (compileMake, createArrays): New static methods.
	* CompileInvoke.java: Handle splices when creating arrays.
	* Invoke.java: Update since validateApplyInvoke handles splices.

2014-05-06  Per Bothner  <per@bothner.com>

	* Invoke.java (applyN): Add support for constructing a ConstVector.

2014-02-16  Per Bothner  <per@bothner.com>

	* CompileBuildObject.java: Likewise.
	* CompileInvoke.java: Likewise.
	* CompileReflect.java: Likewise.
	* FieldLocation.java: Likewise.
	* Invoke.java: Likewise.
	* MakeAnnotation.java: Likewise.

2014-02-12  Per Bothner  <per@bothner.com>
